k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voxtral-server
  namespace: opentts
  labels:
    app.kubernetes.io/name: voxtral-server
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: voxtral-server
    app.kubernetes.io/managed-by: kubectl
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: voxtral-server
    app.kubernetes.io/component: server
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
